changed website text

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ index.html
 <body>
 
 <h1>Welcome to My Website</h1>
-<p>This is my first static website.</p>
+<p>This is my deployed Website</p>
 
 </body>
 </html>
